--- a/frontend/src/mobileStyles.css
+++ b/frontend/src/mobileStyles.css
@@ -144,13 +144,13 @@
       margin-right: 0px;
       margin-bottom: 40px;
       box-shadow: 0 5px 20px rgba(0, 0, 0, .7);
-      z-index: 9999;
+      /* z-index: 9999; */
     }
 
     .land_sat{
       width: 100px;
       margin-bottom: 40px;
-      z-index: 9999;
+      /* z-index: 9999; */
       margin-left: 0px;
       margin-top: 0px;
     }
@@ -171,7 +171,7 @@
     }
 
     .rdp {
-      z-index: 9999;
+      /* z-index: 9999; */
     }
 
     .date_and_text_nasa{
